--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -1,172 +1,305 @@
---- 
-title: "The EMaC R Manual"
-author: "Alex Sciuto"
-date: "Last Updated Febuary 2020"
-site: bookdown::bookdown_site
-output: bookdown::gitbook
-documentclass: book
-bibliography: [book.bib, packages.bib]
-biblio-style: apalike
-link-citations: yes
-github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
----
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+%
+\documentclass[
+]{book}
+\usepackage{lmodern}
+\usepackage{amssymb,amsmath}
+\usepackage{ifxetex,ifluatex}
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+  \usepackage[T1]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
+  \usepackage{unicode-math}
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\fi
+% Use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+\usepackage{xcolor}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\hypersetup{
+  pdftitle={The EMaC R Manual},
+  pdfauthor={Alex Sciuto},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
+\urlstyle{same} % disable monospaced font for URLs
+\usepackage{color}
+\usepackage{fancyvrb}
+\newcommand{\VerbBar}{|}
+\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+% Add ',fontsize=\small' for more characters per line
+\usepackage{framed}
+\definecolor{shadecolor}{RGB}{248,248,248}
+\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\usepackage{longtable,booktabs}
+% Correct order of tables after \paragraph or \subparagraph
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
+\makeatother
+% Allow footnotes in longtable head/foot
+\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
+\makesavenoteenv{longtable}
+\usepackage{graphicx,grffile}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+% Set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\setcounter{secnumdepth}{5}
+\usepackage{booktabs}
+\usepackage{amsthm}
+\makeatletter
+\def\thm@space@setup{%
+  \thm@preskip=8pt plus 2pt minus 4pt
+  \thm@postskip=\thm@preskip
+}
+\makeatother
+\usepackage[]{natbib}
+\bibliographystyle{apalike}
 
-# How to Install R {#download}
+\title{The EMaC R Manual}
+\author{Alex Sciuto}
+\date{Last Updated Febuary 2020}
 
-This is the EMaC manual for how to wrangle, analyze, and visualize data in **R**. I will review a few key packages, in addition to explaing their key functions, with real data examples. 
+\begin{document}
+\maketitle
 
-There are two things you need to do to install R on your computer. First, you would need to install the latest version of R which you would download and install from this link: [R-download](https://cloud.r-project.org/). Once you run and install R onto your computer, you would need to install R-Studio. R studio is the graphic user interface (GUI) where you can place all of your R-code. Follow this link: [R-Studio Desktop Download](https://rstudio.com/products/rstudio/download/). Once you have these two programs installed, all you need to do is launch R-studio Desktop and you are ready to go.
+{
+\setcounter{tocdepth}{1}
+\tableofcontents
+}
+\hypertarget{download}{%
+\chapter{How to Install R}\label{download}}
 
+This is the EMaC manual for how to wrangle, analyze, and visualize data in \textbf{R}. I will review a few key packages, in addition to explaing their key functions, with real data examples.
 
+There are two things you need to do to install R on your computer. First, you would need to install the latest version of R which you would download and install from this link: \href{https://cloud.r-project.org/}{R-download}. Once you run and install R onto your computer, you would need to install R-Studio. R studio is the graphic user interface (GUI) where you can place all of your R-code. Follow this link: \href{https://rstudio.com/products/rstudio/download/}{R-Studio Desktop Download}. Once you have these two programs installed, all you need to do is launch R-studio Desktop and you are ready to go.
 
-<!--chapter:end:index.Rmd-->
-
-# Introduction to Programming in R {#intro}
+\hypertarget{intro}{%
+\chapter{Introduction to Programming in R}\label{intro}}
 
 Before you can do data wrangling, statiscs, and visualization using R for cognitive psychology research, you need to learn the basic syntax in R. This chapter will introduce the basics.
 
-## Variables in R
+\hypertarget{variables-in-r}{%
+\section{Variables in R}\label{variables-in-r}}
 
-R can manipulate and wrangle all kinds of data, these data could be stored in a handful of variables that we can then work with. The first one we will be talking about is numeric. 
+R can manipulate and wrangle all kinds of data, these data could be stored in a handful of variables that we can then work with. The first one we will be talking about is numeric.
 
-### Numeric
+\hypertarget{numeric}{%
+\subsection{Numeric}\label{numeric}}
 
 a numeric is a number (including decimals) that can be stored within a variable. Here is an example:
 
-***` x = 2 `***
+\textbf{\emph{\texttt{x\ =\ 2}}}
 
-Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to do arithemtic, `x` will be treated as `2`. Moreover, there are specific functions in R we can use in order to do arithmetic with numeric variables. Here are a few examples:
+Here, we assigned the numeric value \texttt{2} to the variable \texttt{x}. Thus, if we were to do arithemtic, \texttt{x} will be treated as \texttt{2}. Moreover, there are specific functions in R we can use in order to do arithmetic with numeric variables. Here are a few examples:
 
-| Arithemtic | R-Input   | R-Output   |    
-| :-------------: |:-------------:|:---:|
-| Addition: | `x + 2`|`4`|
-| Substraction: | `x - 2 `|`0`|
-| Division:  | `x / 2  `|`1`|
-| Multiplication: |`x * 2`|`4`|
-| Exponent: | `x ^ 2 `|`4`|
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+Arithemtic & R-Input & R-Output\tabularnewline
+\midrule
+\endhead
+Addition: & \texttt{x\ +\ 2} & \texttt{4}\tabularnewline
+Substraction: & \texttt{x\ -\ 2} & \texttt{0}\tabularnewline
+Division: & \texttt{x\ /\ 2} & \texttt{1}\tabularnewline
+Multiplication: & \texttt{x\ *\ 2} & \texttt{4}\tabularnewline
+Exponent: & \texttt{x\ \^{}\ 2} & \texttt{4}\tabularnewline
+\bottomrule
+\end{longtable}
 
-
-
-### Character
+\hypertarget{character}{%
+\subsection{Character}\label{character}}
 
 A character is a combination of characters (either letters and/or numbers) that can be stored within a variable. Moreover, it is very important that you place the character between quotation marks. Here is an example:
 
-***`x = "Cognitive Psychology"`***
+\textbf{\emph{\texttt{x\ =\ "Cognitive\ Psychology"}}}
 
-Here, we assigned the character value `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+Here, we assigned the character value \texttt{"Cognitive\ Psychology"} to the variable \texttt{x}. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
 
-### Logical 
+\hypertarget{logical}{%
+\subsection{Logical}\label{logical}}
 
-A logical can only have two possible values, `TRUE` and `FALSE` that can be stored within a variable. This is not typically a varaible type that you will need to assign variable values to. However, the logical type variable is extremely important becuase a lot of functions in R return a logical variable. We will dive into some of these functions 
+A logical can only have two possible values, \texttt{TRUE} and \texttt{FALSE} that can be stored within a variable. This is not typically a varaible type that you will need to assign variable values to. However, the logical type variable is extremely important becuase a lot of functions in R return a logical variable. We will dive into some of these functions
 
-### Vector 
+\hypertarget{vector}{%
+\subsection{Vector}\label{vector}}
 
-A vector is multiple variables stored into one data-set. Vectors can contain any variable type: character, numeric, string, and logical. When you are declaring a a vector type variable, you typically have to use the concatenate function `c()`. Here is an example:
+A vector is multiple variables stored into one data-set. Vectors can contain any variable type: character, numeric, string, and logical. When you are declaring a a vector type variable, you typically have to use the concatenate function \texttt{c()}. Here is an example:
 
-`x = c(1,2,3,4)`
+\texttt{x\ =\ c(1,2,3,4)}
 
-`x = c("I", "like", "Cognitive", "Psychology")`
+\texttt{x\ =\ c("I",\ "like",\ "Cognitive",\ "Psychology")}
 
-`x = c(TRUE, FALSE, FALSE, TRUE)`
+\texttt{x\ =\ c(TRUE,\ FALSE,\ FALSE,\ TRUE)}
 
-To reference a vector varaible, you need to use `[]` and inside the brackets, you have to specify the index of where the given variable in the vector is. Here is an example
+To reference a vector varaible, you need to use \texttt{{[}{]}} and inside the brackets, you have to specify the index of where the given variable in the vector is. Here is an example
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{x =}\StringTok{ }\KeywordTok{c}\NormalTok{(}\StringTok{"10"}\NormalTok{, }\StringTok{"20"}\NormalTok{, }\StringTok{"30"}\NormalTok{, }\StringTok{"40"}\NormalTok{)}
+\NormalTok{x[}\DecValTok{4}\NormalTok{]}
+\end{Highlighting}
+\end{Shaded}
 
-```r
-x = c("10", "20", "30", "40")
-x[4]
-```
-
-```
+\begin{verbatim}
 ## [1] "40"
-```
+\end{verbatim}
 
-Here, we assigned the numbers: `10, 20, 30, 40` to the vector `x`. `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+Here, we assigned the numbers: \texttt{10,\ 20,\ 30,\ 40} to the vector \texttt{x}. \texttt{"Cognitive\ Psychology"} to the variable \texttt{x}. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
 
-## Logical Operators & if-Statements
+\hypertarget{logical-operators-if-statements}{%
+\section{Logical Operators \& if-Statements}\label{logical-operators-if-statements}}
 
-Now that you have a basic understanding of how variables work in R, the next step is to learn how to use logical operators in order to specifiy what are the specific conditions under which you want your variables to be manipulated. The main way to do this in R is by using logical operators. 
+Now that you have a basic understanding of how variables work in R, the next step is to learn how to use logical operators in order to specifiy what are the specific conditions under which you want your variables to be manipulated. The main way to do this in R is by using logical operators.
 
-***` x = 2 `***
+\textbf{\emph{\texttt{x\ =\ 2}}}
 
-Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to apply logical operators to `x`, `x` will be treated as `2`. Here are examples of all of the logical operators:
+Here, we assigned the numeric value \texttt{2} to the variable \texttt{x}. Thus, if we were to apply logical operators to \texttt{x}, \texttt{x} will be treated as \texttt{2}. Here are examples of all of the logical operators:
 
-| Logical Operators      | Description   |   R-Input   | R-Output|  
-| ------------- |:-------------:|:--:|:--:|
-| <     | less than | x < 10 | TRUE |
-| <=     | less than or equal to |x <= 2| TRUE|
-| > | greater than    | x > 1| TRUE|
-| >= | greater than or equal to |x >= 3| FALSE| 
-| == | exactly equal to | x == 9| FALSE|
-| != | not equal to    | x != 10| FALSE|
-| !x| 	Not x  | !x | FALSE|
-| x \|\ y | x OR y    | x == 10 \|\ x != 10|TRUE|
-| x & y  | 	x AND y | x == 10 &x != 10|FALSE|
+\begin{longtable}[]{@{}lccc@{}}
+\toprule
+Logical Operators & Description & R-Input & R-Output\tabularnewline
+\midrule
+\endhead
+\textless{} & less than & x \textless{} 10 & TRUE\tabularnewline
+\textless= & less than or equal to & x \textless= 2 & TRUE\tabularnewline
+\textgreater{} & greater than & x \textgreater{} 1 & TRUE\tabularnewline
+\textgreater= & greater than or equal to & x \textgreater= 3 & FALSE\tabularnewline
+== & exactly equal to & x == 9 & FALSE\tabularnewline
+!= & not equal to & x != 10 & FALSE\tabularnewline
+!x & Not x & !x & FALSE\tabularnewline
+x \textbar~y & x OR y & x == 10 \textbar~x != 10 & TRUE\tabularnewline
+x \& y & x AND y & x == 10 \&x != 10 & FALSE\tabularnewline
+\bottomrule
+\end{longtable}
 
-Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function `if_else()`. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one. 
+Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function \texttt{if\_else()}. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one.
 
+\hypertarget{introduction-to-data-wrangling}{%
+\chapter{Introduction to Data Wrangling}\label{introduction-to-data-wrangling}}
 
+To introduce data wrangling, we will be working with a dataset from a study conducted in our lab. Here are the details of the study in order to understand the data manipulation more:
 
+\hypertarget{the-study}{%
+\section{The study}\label{the-study}}
 
+On each trial in this experiment (n = 174), each participant (n = 84) sees a target word very briefly (e.g., word) and then is prompted to select which of two letters was in a particular position of that word (e.g., \_ \_ \_ ↓) - one letter was in the presented word (e.g., D) and the other letter is in an orthographic neighbor of the word (e.g., K). This is a 2 (visual field) x 3 (sentence context) experimental design: the target word is either presented in the fovea (i.e., center of the screen) or the parafovea (i.e., 3 degrees to the right of fixation). Prior to the target word, they see a sentence context presented via Rapid Serial Visual Presentation (RSVP) that constrains to target (i.e., makes the presented word predictable and the orthographic neighbor implausible), constrains to the alternative (i.e., makes the orthographic neighbor predictable and the presented word implausible), or is neutral (i.e., makes neither word predictable but both of them plausible). In addition, we collect data about the individual subjects' language ability (i.e., their z-score on some test relative to the other participants), including spelling recognition (i.e., circle which words are spelled wrong), spelling dictation (i.e., write out words that they hear said), and phonological decoding (i.e., read aloud a list of words and a list of nonwords), and information about the lexical properties of the words (e.g., word frequency, cloze probability, orthographic neighborhood size, phonological neighborhood size, clustering coefficient, orthographic similarity to other words, which of the two words is higher frequency).
 
-<!--chapter:end:01-intro.Rmd-->
+\hypertarget{loading-in-data}{%
+\section{Loading in Data}\label{loading-in-data}}
 
-# Introduction to Data Wrangling
+\hypertarget{loading-packages}{%
+\subsection{Loading Packages}\label{loading-packages}}
 
-To introduce data wrangling, we will be working with a dataset from a study conducted in our lab. Here are the details of the study in order to understand the data manipulation more: 
+Before we start wrangling the data, we need to load in the packages we are using. In this lab, most of the data wrangling tools we will be using will be located in the \texttt{tidyverse()} package. What is a package? It is simply a group of functions that group of developers made that makes computations easier. To learn more about the \texttt{tidyverse()} package, you may click on this \href{https://www.tidyverse.org/}{link} and read on it! For the data wrangling we will be doing in this section, we will be primarily using a package within tidyverse called \texttt{dplyr()}. to load in the package, simply type in the following code. What this code is saying is IF you don't have the \texttt{tidyverse()} installed, THEN install the package. After that, load the \texttt{tidyverse()} with the \texttt{library()} function.
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{knitr}\OperatorTok{::}\NormalTok{opts_chunk}\OperatorTok{$}\KeywordTok{set}\NormalTok{(}\DataTypeTok{echo =} \OtherTok{TRUE}\NormalTok{)}
+\NormalTok{knitr}\OperatorTok{::}\NormalTok{opts_knit}\OperatorTok{$}\KeywordTok{set}\NormalTok{(}\DataTypeTok{root.dir =} \StringTok{"C:/Users/alexs/Documents/Github/Emac_Rmanual/"}\NormalTok{) }
+\end{Highlighting}
+\end{Shaded}
 
-## The study
+\begin{Shaded}
+\begin{Highlighting}[]
+\ControlFlowTok{if}\NormalTok{(}\OperatorTok{!}\KeywordTok{require}\NormalTok{(tidyverse))\{}
+    \KeywordTok{install.packages}\NormalTok{(}\StringTok{"tidyverse"}\NormalTok{)}
+\NormalTok{\}}
+\KeywordTok{library}\NormalTok{(tidyverse) }
+\end{Highlighting}
+\end{Shaded}
 
-On each trial in this experiment (n = 174), each participant (n = 84) sees a target word very briefly (e.g., word) and then is prompted to select which of two letters was in a particular position of that word (e.g., _ _ _ ↓) - one letter was in the presented word (e.g., D) and the other letter is in an orthographic neighbor of the word (e.g., K). This is a 2 (visual field) x 3 (sentence context) experimental design: the target word is either presented in the fovea (i.e., center of the screen) or the parafovea (i.e., 3 degrees to the right of fixation). Prior to the target word, they see a sentence context presented via Rapid Serial Visual Presentation (RSVP) that constrains to target (i.e., makes the presented word predictable and the orthographic neighbor implausible), constrains to the alternative (i.e., makes the orthographic neighbor predictable and the presented word implausible), or is neutral (i.e., makes neither word predictable but both of them plausible). In addition, we collect data about the individual subjects’ language ability (i.e., their z-score on some test relative to the other participants), including spelling recognition (i.e., circle which words are spelled wrong), spelling dictation (i.e., write out words that they hear said), and phonological decoding (i.e., read aloud a list of words and a list of nonwords), and information about the lexical properties of the words (e.g., word frequency, cloze probability, orthographic neighborhood size, phonological neighborhood size, clustering coefficient, orthographic similarity to other words, which of the two words is higher frequency).
+\hypertarget{setting-the-working-directory}{%
+\subsection{setting the working directory}\label{setting-the-working-directory}}
 
-## Loading in Data
+Now that we have the packages that we need, we need to load up our directory. What is a directory? It is essentially the folder we will be using to read in files, or export files into. In this directory, we have our data set of interest, \texttt{Topgown\_Data}
 
-### Loading Packages
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{setwd}\NormalTok{(}\StringTok{"C:/Users/alexs/Documents/Github/Emac_Rmanual/"}\NormalTok{)}
 
-Before we start wrangling the data, we need to load in the packages we are using. In this lab, most of the data wrangling tools we will be using will be located in the `tidyverse()` package. What is a package? It is simply a group of functions that group of developers made that makes computations easier. To learn more about the `tidyverse()` package, you may click on this [link](https://www.tidyverse.org/) and read on it! For the data wrangling we will be doing in this section, we will be primarily using a package within tidyverse called `dplyr()`. to load in the package, simply type in the following code. What this code is saying is IF you don't have the `tidyverse()` installed, THEN install the package. After that, load the `tidyverse()` with the `library()` function.
+\KeywordTok{library}\NormalTok{(knitr)}
+\KeywordTok{library}\NormalTok{(kableExtra)}
+\end{Highlighting}
+\end{Shaded}
 
+\hypertarget{reading-in-data}{%
+\subsection{Reading in Data}\label{reading-in-data}}
 
-```r
-knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = "C:/Users/alexs/Documents/Github/Emac_Rmanual/") 
-```
+Now that we have our working directory set we can use the \texttt{read\_csv()} function which requires one minimum argument to work which is the name of your \texttt{.csv} file. Here we are setting the variable \texttt{mydata} to the contents within the \texttt{.csv} file. It stores the contents of \texttt{Topgown\_Data.csv} in what is called a data frame. What is a dataframe? it is simply a matrix where each row constitutes a variable (which can be any type you want), and rows are observations.
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{mydata =}\StringTok{ }\KeywordTok{read_csv}\NormalTok{(}\StringTok{"TopGown_Data.csv"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
 
-```r
-if(!require(tidyverse)){
-    install.packages("tidyverse")
-}
-library(tidyverse) 
-```
-
-### setting the working directory
-
-Now that we have the packages that we need, we need to load up our directory. What is a directory? It is essentially the folder we will be using to read in files, or export files into. In this directory, we have our data set of interest, `Topgown_Data`
-
-
-```r
-setwd("C:/Users/alexs/Documents/Github/Emac_Rmanual/")
-
-library(knitr)
-library(kableExtra)
-```
-
-### Reading in Data
-
-Now that we have our working directory set we can use the `read_csv()` function which requires one minimum argument to work which is the name of your `.csv` file. Here we are setting the variable `mydata` to the contents within the `.csv` file. It stores the contents of `Topgown_Data.csv` in what is called a data frame. What is a dataframe? it is simply a matrix where each row constitutes a variable (which can be any type you want), and rows are observations.
-
-
-```r
-mydata = read_csv("TopGown_Data.csv")
-```
-
-```
+\begin{verbatim}
 ## Warning: Missing column names filled in: 'X1' [1]
-```
+\end{verbatim}
 
-```
+\begin{verbatim}
 ## Parsed with column specification:
 ## cols(
 ##   .default = col_double(),
@@ -179,12 +312,11 @@ mydata = read_csv("TopGown_Data.csv")
 ##   correct_answer = col_character(),
 ##   Higher_Freq = col_character()
 ## )
-```
+\end{verbatim}
 
-```
+\begin{verbatim}
 ## See spec(...) for full column specifications.
-```
-
+\end{verbatim}
 
 \begin{tabular}{r|l|l|l|l|l|l|l|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|l}
 \hline
@@ -28200,31 +28332,27 @@ X1 & Participants & visual\_field & constrained\_to & presented\_word & predicte
 \hline
 \end{tabular}
 
-<!--chapter:end:02-literature.Rmd-->
-
-# Methods
+\hypertarget{methods}{%
+\chapter{Methods}\label{methods}}
 
 We describe our methods in this chapter.
 
-<!--chapter:end:03-method.Rmd-->
+\hypertarget{applications}{%
+\chapter{Applications}\label{applications}}
 
-# Applications
+Some \emph{significant} applications are demonstrated in this chapter.
 
-Some _significant_ applications are demonstrated in this chapter.
+\hypertarget{example-one}{%
+\section{Example one}\label{example-one}}
 
-## Example one
+\hypertarget{example-two}{%
+\section{Example two}\label{example-two}}
 
-## Example two
-
-<!--chapter:end:04-application.Rmd-->
-
-# Final Words
+\hypertarget{final-words}{%
+\chapter{Final Words}\label{final-words}}
 
 We have finished a nice book.
 
-<!--chapter:end:05-summary.Rmd-->
+  \bibliography{book.bib,packages.bib}
 
-
-
-<!--chapter:end:06-references.Rmd-->
-
+\end{document}
